added apache conf for cake.  added default controller.  tests not working yet, not sure why.

--- a/apache.conf
+++ b/apache.conf
@@ -50,3 +50,21 @@ Listen 8882
         RewriteRule ^(.*)$ app_dev.php [QSA,L]
     </Directory>
 </VirtualHost>
+
+# CakePHP
+Listen 8883
+<VirtualHost *:8883>
+    DocumentRoot /data/Framework-Tests/cakephp-1.2.6/app/webroot
+
+    ErrorLog /data/Framework-Tests/cakephp-1.2.6/app/logs/apache-error.log
+    CustomLog /data/Framework-Tests/cakephp-1.2.6/app/logs/apache-access.log combined
+
+    <Directory "/data/Framework-Tests/cakephp-1.2.6/app/webroot">
+        Options FollowSymLinks  
+        AllowOverride All
+        RewriteCond %{REQUEST_FILENAME} !-d
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^(.*)$ /index.php?url=$1 [QSA,L]
+    </Directory>
+</VirtualHost>
+
