--- a/zend/composer.json
+++ b/zend/composer.json
@@ -1,11 +1,14 @@
 {
-    "repositories": [
-        {
-            "type": "composer",
-            "url": "http://packages.zendframework.com/"
-        }
+    "name": "zendframework/skeleton-application",
+    "description": "Skeleton Application for ZF2",
+    "license": "BSD-3-Clause",
+    "keywords": [
+        "framework",
+        "zf2"
     ],
+    "homepage": "http://framework.zend.com/",
     "require": {
-        "zendframework/zendframework": "2.0.*"
+        "php": ">=5.3.3",
+        "zendframework/zendframework": "2.*"
     }
 }
