cakephp test suite

--- a/apache.conf
+++ b/apache.conf
@@ -50,3 +50,22 @@ Listen 8882
         RewriteRule ^(.*)$ app_dev.php [QSA,L]
     </Directory>
 </VirtualHost>
+# Symphony - dev
+
+Listen 8883
+<VirtualHost *:8883>
+    DocumentRoot /data/Framework-Tests/cakephp-1.2.6/app/webroot
+
+    ErrorLog /data/Framework-Tests/cakephp-1.2.6/app/tmp/logs/apache-error.log
+    CustomLog /data/Framework-Tests/cakephp-1.2.6/app/tmp/logs/apache-access.log combined
+
+    <Directory "/data/Framework-Tests/cakephp-1.2.6/app/webroot">
+        Options +FollowSymlinks
+        Order allow,deny
+        Allow from all
+
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} !-f
+        RewriteRule ^(.*)$ index.php [QSA,L]
+    </Directory>
+</VirtualHost>
