--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -1,5 +1,5 @@
-#imports:
-#    - { resource: parameters.yml }
+imports:
+    - { resource: parameters.yml }
 #    - { resource: security.yml }
 
 framework:
