--- a/apache.conf
+++ b/apache.conf
@@ -26,9 +26,11 @@ Listen 8881
         Order allow,deny
         Allow from all
 
+
         RewriteEngine On
-        RewriteCond %{REQUEST_FILENAME} !-f
-        RewriteRule ^(.*)$ app.php [QSA,L]
+        Include /data/Framework-Tests/symfony-prod.conf
+        #RewriteCond %{REQUEST_FILENAME} !-f
+        #RewriteRule ^(.*)$ app.php [QSA,L]
     </Directory>
 </VirtualHost>
 
@@ -67,5 +69,29 @@ Listen 8883
         RewriteEngine On
         RewriteCond %{REQUEST_FILENAME} !-f
         RewriteRule ^(.*)$ index.php [QSA,L]
+    </Directory>
+</VirtualHost>
+
+# Zend
+Listen 8884
+<VirtualHost *:8884>
+    DocumentRoot /data/Framework-Tests/zend/public
+
+    ErrorLog /data/Framework-Tests/zend/logs/apache-error.log
+    CustomLog /data/Framework-Tests/zend/logs/apache-access.log combined
+
+    SetEnv APPLICATION_ENV "production"
+    <Directory "/data/Framework-Tests/zend/public">
+        Options +FollowSymlinks
+        AllowOverride None
+        Order allow,deny
+        Allow from all
+
+        RewriteEngine On
+        RewriteCond %{REQUEST_FILENAME} -s [OR]
+        RewriteCond %{REQUEST_FILENAME} -l [OR]
+        RewriteCond %{REQUEST_FILENAME} -d
+        RewriteRule ^.*$ - [NC,L]
+        RewriteRule ^.*$ index.php [NC,L]
     </Directory>
 </VirtualHost>
