--- a/symfony/app/config/config.yml
+++ b/symfony/app/config/config.yml
@@ -21,6 +21,8 @@ framework:
 twig:
     debug:            "%kernel.debug%"
     strict_variables: "%kernel.debug%"
+    autoescape:       false
+    optimizations:    -1
 
 # Assetic Configuration
 #assetic:
