Update apache.conf to use named virtual hosts

--- a/apache.conf
+++ b/apache.conf
@@ -3,6 +3,7 @@
 
 # Shared assets
 Listen 8880
+NameVirtualHost *:8880
 <VirtualHost *:8880>
     DocumentRoot /data/Framework-Tests/shared/web
 
@@ -15,6 +16,7 @@ Listen 8880
 
 # Symphony - prod
 Listen 8881
+NameVirtualHost *:8881
 <VirtualHost *:8881>
     DocumentRoot /data/Framework-Tests/symfony/web
 
@@ -34,6 +36,7 @@ Listen 8881
 
 # Symphony - dev
 Listen 8882
+NameVirtualHost *:8882
 <VirtualHost *:8882>
     DocumentRoot /data/Framework-Tests/symfony/web
 
@@ -53,6 +56,7 @@ Listen 8882
 
 # CakePHP
 Listen 8883
+NameVirtualHost *:8883
 <VirtualHost *:8883>
     DocumentRoot /data/Framework-Tests/cakephp-1.2.6/app/webroot
 
